styles.css
body {
    overflow-x: hidden;
}

#background-video {
    height: 100vh;
    width: 100vw;
    object-fit: cover;
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    z-index: -1;
  }

.header-container {
    display: flex;
    padding: 0px;
    margin: -15px;
    background-color: rgba(0, 0, 0, 0.765);
    justify-content: space-between;
    
}

img {
    width: 15cm;
    }

.titles {
    display: flex;
    margin: 4%;
    font-family: Arial, Helvetica, sans-serif;
    color: aliceblue;
    justify-content: space-between;
}

h1 {
    margin: 30px;
    font-size: 35px;
}

.welcome {
    display: flex;
    border: 3px solid;
    padding: 0px;
    margin: 200px;
    border-left: 0px;
    border-right: 0px;
    font-family: Arial, Helvetica, sans-serif;
    color: aliceblue;
}

h2 {
    text-align: center;
    margin: 125px;
    font-size: 30px;
    text-indent: 4px;
    letter-spacing: 7px;
}

.Projects {
    display: flex;
    justify-content: space-around;
    background-color: rgba(0, 0, 0, 0.765);
    margin: -1%;
    padding: 3%;

}

h3 {
    font-family: Arial, Helvetica, sans-serif;
    margin-top: 240px;
    text-align: center;
    color: aliceblue;
    font-size: 55px;
    
}

.DS {
    position: relative; /* required for (c2) */
    max-width: 400px; /* optional */
  }

.DS img { width: 100%;
         border-radius: 24px;
         }
/* (C) CAPTION */
.DS2 {
    /* (C1) DIMENSIONS */
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    border-radius: 24px;
   
    /* (C2) POSITION */
    position: absolute;
    top: 0; left: 0;
    text-align: center;
    letter-spacing: 1px;
    padding-top: 54%;
    font-family: Arial, Helvetica, sans-serif;
   
     /* (C3) COLORS */
    background-color: rgba(0, 0, 0, 0.7);
    color: white;
  }
   
  /* (D) SHOW/HIDE */
  .DS2 {
    visibility: none; opacity: 0;
    transition: opacity 0.3s;
  }
  .DS:hover .DS2 {
    visibility: visible; opacity: 1;
  }

button {
    background-color: #0e5cedc5; /* Green */
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    font-family: Arial, Helvetica, sans-serif;
}

a:link, a:visited {
    color: white;
    padding: 14px 25px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-family: Arial, Helvetica, sans-serif;
  }

.DD {
    position: relative; /* required for (c2) */
    max-width: 400px; /* optional */
  }

.DD img { width: 100%;
         border-radius: 24px;
         }
/* (C) CAPTION */
.DD2 {
    /* (C1) DIMENSIONS */
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    border-radius: 24px;
   
    /* (C2) POSITION */
    position: absolute;
    top: 0; left: 0;
    text-align: center;
    letter-spacing: 1px;
    padding-top: 54%;
    font-family: Arial, Helvetica, sans-serif;
   
     /* (C3) COLORS */
    background-color: rgba(0, 0, 0, 0.7);
    color: white;
  }
   
  /* (D) SHOW/HIDE */
  .DD2 {
    visibility: none; opacity: 0;
    transition: opacity 0.3s;
  }
  .DD:hover .DD2 {
    visibility: visible; opacity: 1;
  }


.Bat {
    position: relative; /* required for (c2) */
    max-width: 400px; /* optional */
  }

.Bat img { width: 100%;
         border-radius: 24px;
         }
/* (C) CAPTION */
.Bat2 {
    /* (C1) DIMENSIONS */
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    border-radius: 24px;
   
    /* (C2) POSITION */
    position: absolute;
    top: 0; left: 0;
    text-align: center;
    letter-spacing: 1px;
    padding-top: 54%;
    font-family: Arial, Helvetica, sans-serif;
   
     /* (C3) COLORS */
    background-color: rgba(0, 0, 0, 0.7);
    color: white;
  }
   
  /* (D) SHOW/HIDE */
  .Bat2 {
    visibility: none; opacity: 0;
    transition: opacity 0.3s;
  }
  .Bat:hover .Bat2 {
    visibility: visible; opacity: 1;
  }

.Vision {
    display: flex;
    border: 3px solid;
    padding: 0px;
    margin: 230px;
    border-left: 0px;
    border-right: 0px;
    font-family: Arial, Helvetica, sans-serif;
    color: aliceblue;
}
 
.Shorts {
    background-color: rgba(0, 0, 0, 0.765);
    margin: -2%;
    padding: 3%;
    margin-top: -1%;
    padding-right: 13%;    
}


p {
    margin-top: -13%;
    margin-right: -9%;
}

.container {
    display: flex;
    justify-content: space-between;
}

.NWH {
    position: relative; /* required for (c2) */
    max-width: 260px; /* optional */
  }

.NWH img { width: 172%;
         border-radius: 24px;
         }
/* (C) CAPTION */
.NWH2 {
    /* (C1) DIMENSIONS */
    box-sizing: border-box;
    width: 172%;
    height: 100%;
    border-radius: 24px;
   
    /* (C2) POSITION */
    position: absolute;
    top: 0; left: 0;
    text-align: center;
    letter-spacing: 1px;
    padding-top: 30%;
    margin: 0%;
    font-family: Arial, Helvetica, sans-serif;
   
     /* (C3) COLORS */
    background-color: rgba(0, 0, 0, 0.7);
    color: white;
  }
   
  /* (D) SHOW/HIDE */
  .NWH2 {
    visibility: none; opacity: 0;
    transition: opacity 0.3s;
  }
  .NWH:hover .NWH2 {
    visibility: visible; opacity: 1;
  }

.Ven {
    position: relative; /* required for (c2) */
    max-width: 260px; /* optional */
  }

.Ven img { width: 172%;
         border-radius: 24px;
         }
/* (C) CAPTION */
.Ven2 {
    /* (C1) DIMENSIONS */
    box-sizing: border-box;
    width: 172%;
    height: 100%;
    border-radius: 24px;
   
    /* (C2) POSITION */
    position: absolute;
    top: 0; left: 0;
    text-align: center;
    letter-spacing: 1px;
    padding-top: 30%;
    font-family: Arial, Helvetica, sans-serif;
   
     /* (C3) COLORS */
    background-color: rgba(0, 0, 0, 0.7);
    color: white;
  }
   
  /* (D) SHOW/HIDE */
  .Ven2 {
    visibility: none; opacity: 0;
    transition: opacity 0.3s;
  }
  .Ven:hover .Ven2 {
    visibility: visible; opacity: 1;
  }

.MK {
    position: relative; /* required for (c2) */
    max-width: 260px; /* optional */

  }

.MK img { width: 172%;
         border-radius: 24px;
         }
/* (C) CAPTION */
.MK2 {
    /* (C1) DIMENSIONS */
    box-sizing: border-box;
    width: 172%;
    height: 100%;
    border-radius: 24px;
   
    /* (C2) POSITION */
    position: absolute;
    top: 0; left: 0;
    text-align: center;
    letter-spacing: 1px;
    padding-top: 30%;
    font-family: Arial, Helvetica, sans-serif;
   
     /* (C3) COLORS */
    background-color: rgba(0, 0, 0, 0.7);
    color: white;
  }
   
  /* (D) SHOW/HIDE */
  .MK2 {
    visibility: none; opacity: 0;
    transition: opacity 0.3s;
  }
  .MK:hover .MK2 {
    visibility: visible; opacity: 1;
  }  
  
.Jus {
    position: relative; /* required for (c2) */
    max-width: 260px; /* optional */

  }

.Jus img { width: 172%;
         border-radius: 24px;
         }
/* (C) CAPTION */
.Jus2 {
    /* (C1) DIMENSIONS */
    box-sizing: border-box;
    width: 172%;
    height: 100%;
    border-radius: 24px;
   
    /* (C2) POSITION */
    position: absolute;
    top: 0; left: 0;
    text-align: center;
    letter-spacing: 1px;
    padding-top: 30%;
    font-family: Arial, Helvetica, sans-serif;
   
     /* (C3) COLORS */
    background-color: rgba(0, 0, 0, 0.7);
    color: white;
  }
   
  /* (D) SHOW/HIDE */
  .Jus2 {
    visibility: none; opacity: 0;
    transition: opacity 0.3s;
  }
  .Jus:hover .Jus2 {
    visibility: visible; opacity: 1;
  }
  

